[build-system]
requires = ["setuptools>=45.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molecbio"
version = "0.6.1"
dependencies = ["numpy>=1.24.4", "scipy>=1.6.0"]
authors = [{name="Dave Curran", email="daves.binf.tools@gmail.com"}, ]
description = "A package to deal with some molecular biology tasks"
readme = "README.md"
requires-python = ">=3.5"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/dave-the-scientist/molecbio"